# tep

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  tep.rs
tests/: every_colour_defintion.tep  standard.tep  standard_image.tep  standard_palette  standard_spaces.tep
