[package]
version = "0.1.0"
name = "tep"
description = "Simple template library"
repository = "https://github.com/gennyble/tep"
license-file = "LICENSE"

edition = "2021"
authors = ["Genny Z <gen@nyble.dev>"]
keywords = ["image", "pixel-art"]
categories = ["command-line-utilities", "multimedia::images", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
thiserror = "1.0.37"
png = "0.17.6"
getopts = "0.2.21"